--- a/inline.css
+++ b/inline.css
@@ -1,31 +1,32 @@
-.cards-wrapper {
-    display: flex;
-    justify-content: center;
+.iconClass{
+  position: absolute; 
+  right: 1%;
+}
+
+.HeaderClass{
+  margin-top: 5%;
+  margin-bottom:2%;
+}
+/* `sm` applies to x-small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) { 
+  .iconClass{
+    position: relative; 
   }
-  .card img {
-    max-width: 100%;
-    max-height: 100%;
+
+  .HeaderClass{
+    margin-top: 15%;
+    margin-bottom:2%;
   }
-  .card {
-    margin: 0 0.5em;
-    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-    border: none;
-    border-radius: 0;
-  }
-  .carousel-inner {
-    padding: 1em;
-  }
-  .carousel-control-prev,
-  .carousel-control-next {
-    background-color: #e1e1e1;
-    width: 5vh;
-    height: 5vh;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  @media (min-width: 768px) {
-    .card img {
-      height: 11em;
-    }
-  }
+ }
+
+/* // `md` applies to small devices (landscape phones, less than 768px)*/
+@media (max-width: 767.98px) {  }
+
+/* // `lg` applies to medium devices (tablets, less than 992px)*/
+@media (max-width: 991.98px) {  }
+
+/* // `xl` applies to large devices (desktops, less than 1200px)*/
+@media (max-width: 1199.98px) {  }
+
+/* // `xxl` applies to x-large devices (large desktops, less than 1400px)*/
+@media (max-width: 1399.98px) {  }
